cooper font from local source for faster loading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./modernizr-custom.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/cooper-hewitt" type="text/css" />
+    <!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/cooper-hewitt" type="text/css" />-->
     <link rel="Stylesheet" href="./styles/style.css">
 
     <title>Document</title>
