nunito local font title in head section
Signed-off-by: Kiszuriwalilibori <kiszuriwalilibori@poczta.onet.pl>

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Javascriptowe książki">
+    <title>Javascriptove ksiązki</title>
     <script src="./modernizr-custom.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700" rel="stylesheet"> -->
     <link rel="Stylesheet" href="./styles/style.css">
 
     <title>Document</title>
@@ -55,6 +57,7 @@
     <footer>
 
     </footer>   
-<script src= './script.js' type="module" ></script>
+<!--<script src= './script.js' type="module" ></script>-->
+<script src= './bundle.js' type="module" ></script>
 </body>
 </html>
