--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Javascriptowe książki">
     <title>Javascriptove ksiązki</title>
     <script src="./modernizr-custom.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700&display=swap&subset=latin-ext" rel="stylesheet"> 
     <link rel="Stylesheet" href="./styles/style.css">
 
     <title>Document</title>
