Signed-off-by: Kiszuriwalilibori <kiszuriwalilibori@poczta.onet.pl>

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
                 <h2><span>Pokaż tylko</span></h2>
                 <ul id='textInput' data-tooltip = 'Nacisnij ENTER aby wyszukać' >
-                    <li>Powyżej <input label = 'pageQuery' data-tooltip = 'Naciśnij ENTER aby wyszukać' pattern="[0-9]+" class = 'pageQueryInput' name ='textInput' id='pageQueryInput' type="text"> stron</li>
+                    <li> <label for='pageQueryInput'>Powyżej</label> <input data-tooltip = 'Naciśnij ENTER aby wyszukać' pattern="[0-9]+" class = 'pageQueryInput' name ='textInput' id='pageQueryInput' type="text"> stron</li>
                 </ul>
                 <button id ='resetButton' class="resetButton hvr-pulse-grow" type ='reset'  >Wyczyść</button>
             </form>
