--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Javascriptowe książki">
     <title>Javascriptove ksiązki</title>
     <script src="./modernizr-custom.js"></script>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700&display=swap&subset=latin-ext" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="Stylesheet" href="./styles/style.css">
 
     <title>Document</title>
@@ -28,10 +27,12 @@
                     <li><input id = 'releaseDate'  name = 'sort' type="radio" value ='releaseDate'> <label for='releaseDate'>dacie wydania</label></li>
                     <li><input id = 'author' name = 'sort' type="radio" value ='author'> <label for='author'>nazwisku autora</label></li> 
                 </ul>
-                <h2><span>Pokaż tylko</span></h2>
-                <ul id='textInput' data-tooltip = 'Nacisnij ENTER aby wyszukać' >
-                    <li> <label for='pageQueryInput'>Powyżej</label> <input data-tooltip = 'Naciśnij ENTER aby wyszukać' pattern="[0-9]+" class = 'pageQueryInput' name ='textInput' id='pageQueryInput' type="text"> stron</li>
-                </ul>
+                <div class = 'queryForm__pageLimit'>
+                    <h2><span>Pokaż tylko</span></h2>
+                    <ul id='textInput' data-tooltip = 'Nacisnij ENTER aby wyszukać' >
+                        <li> <label for='pageQueryInput'>Powyżej</label> <input data-tooltip = 'Naciśnij ENTER aby wyszukać' pattern="[0-9]+" class = 'pageQueryInput' name ='textInput' id='pageQueryInput' type="text"> stron</li>
+                    </ul>
+                </div>
                 <button id ='resetButton' class="resetButton hvr-pulse-grow" type ='reset'  >Wyczyść</button>
             </form>
         </aside>
