new test  of webworker
Signed-off-by: Kiszuriwalilibori <kiszuriwalilibori@poczta.onet.pl>

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <script src='./js/bundle.js' defer></script>
     <title>Document</title>
     <link rel="shortcut icon" href="./graphics/favicon.ico" type="image/x-icon" />
-    <link rel="modulepreload" href="./js/fetchworker.js">
+    <!-- <link rel="modulepreload" href="./js/fetchworker.js" as="script"> -->
     <template id='no_books_found_content'>
         <span id='closeNoBooksScreen' class='noBooksModal__close'>&times;</span>
         <div><span>Nie znaleziono przedmiotów </span><br><span>spełniających kryteria wyszukiwania</span></div>
