--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,8 @@
     </template>
 
     <template id='modal_book_template'>
-        <div class="myModal__content"><span id="close" class="myModal__close icon-circle-regular icon-times-solid ">
-            </span><img class="myModal__image" id="book_modal_image"
+        <div class="myModal__content"><button id="close" class="myModal__close icon-circle-regular icon-times-solid ">
+        </button><img class="myModal__image" id="book_modal_image"
                 src="https://covers.oreillystatic.com/images/9780596805531/lrg.jpg"></div>
     </template>
 
@@ -107,8 +107,8 @@
 
     <aside id="myModal" class="myModal" style="display: none">
         <div class="myModal__content">
-            <span id="close" class="myModal__close icon-circle-regular icon-times-solid ">
-            </span>
+            <button id="close" class="myModal__close icon-circle-regular icon-times-solid ">
+            </button>
             <img class="myModal__image" id="book_modal_image" src="">
         </div>
     </aside>
